2003-11-3- Richard Frith-Macdonald <rfm@gnu.org>

	* user_home.c: Use name of current user under unix (rather than
	environment variables etc).

Fri Nov 28 19:07:11 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* rules.make (ADDITIONAL_OBJC_LIBS): Fixed bug in the
	implementation of ADDITIONAL_NATIVE_LIBS on gnu.

Tue Nov 25 12:23:20 2003  Manuel Guesdon <ml@orange-concept.com>

	* Instance/Shared/bundle.make
	(shared-instance-bundle-all-localized-webresources): Fixed syntax
	error.

2003-11-13  David Ayers  <d.ayers@inode.at>

	* Instance/framework.make: Remove symlink.

Sat Nov  8 22:41:03 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* target.make: Use $(ALL_LDFLAGS) when linking shared stuff.
	Otherwise there is no way to add linker flags when libraries and
	frameworks are linked.  Change applied to all shared link commands
	on all platforms.

Sat Nov  8 16:40:59 2003  Matt Rice <ratmice@yahoo.com>

	* Documentation/DESIGN: Updated makefiles location.
	* Documentation/README.MinGW: Updated makefiles location.  Added
	comment on buggy 'ln -s' on mingw.
	* Documentation/README.Cygwin: Updated makefiles location.
	* Documentation/README.NetBSD: Updated makefiles location.
	* Documentation/install.texi: Updated makefiles location.
	* Documentation/machines.texi: Updated makefiles location.
	* Documentation/make.texi: Updated makefiles location, use
	GNUSTEP_MAKEFILES variable.
	
Mon Nov  3 23:48:41 2003  Marcus Muller <znek@mulle-kybernetik.com>

	* target.make (SHARED_LIB_LINK_CMD): Use -prebind flag on Apple.
	* Instance/framework.make (DYLIB_INSTALL_NAME_BASE): New variable.
	(LIB_LINK_INSTALL_NAME): Define using DYLIB_INSTALL_NAME_BASE if
	it was set.

Mon Nov  3 23:34:56 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* rules.make (ADDITIONAL_INCLUDE_DIRS): Do not add -framework
	flags from ADDITIONAL_NATIVE_LIBS.

Mon Nov  3 23:30:47 2003  Marcus Muller <znek@mulle-kybernetik.com>

	* library-combo.make (INTERNAL_OBJCFLAGS): Do not add -framework